Restructures project and fixes gulp watch

--- a/www/app/partials/exercise1.partial.htm
+++ b/www/app/partials/exercise1.partial.htm
@@ -1,4 +1,4 @@
-<link href="/partials/exercise.css" rel="stylesheet">
+<link href="/www/app/partials/exercise.css" rel="stylesheet">
 
 <div class="ui container">
 	<div>
