--- a/www/app/partials/welcome.partial.htm
+++ b/www/app/partials/welcome.partial.htm
@@ -1,4 +1,4 @@
-<link href="/partials/welcome.css" rel="stylesheet">
+<link href="/www/app/partials/welcome.css" rel="stylesheet">
 
 <div class="ui container">
 	<div>
